--- a/package.json
+++ b/package.json
@@ -3,12 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@popmotion/popcorn": "^0.4.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "framer-motion": "^4.1.17",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-image-lightbox": "^5.1.4",
+    "react-images": "1.0.0",
+    "react-loader-spinner": "^4.0.0",
+    "react-modal-image": "^2.5.0",
+    "react-photo-gallery": "8.0.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.4.6",
+    "simple-react-lightbox": "^3.6.6",
+    "swiper": "^6.6.2",
+    "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
