--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@popmotion/popcorn": "^0.4.4",
@@ -16,12 +17,14 @@
     "react-dom": "^17.0.2",
     "react-image-lightbox": "^5.1.4",
     "react-images": "1.0.0",
+    "react-intl": "3.1.0",
     "react-loader-spinner": "^4.0.0",
     "react-modal-image": "^2.5.0",
     "react-photo-gallery": "8.0.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.4.6",
+    "react-toastify": "^9.0.4",
     "simple-react-lightbox": "^3.6.6",
     "swiper": "^6.6.2",
     "typewriter-effect": "^2.17.0",
